src/LambdaCalc/LambdaCalc/LambdaCalculus/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from LambdaCalc/LambdaCalculus/Par.y
-----------------------------------------------------------------------------

state 24 contains 2 shift/reduce conflicts.
state 25 contains 2 shift/reduce conflicts.
state 26 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pTerm -> Term                               (1)
	%start_pVariable -> Variable                       (2)
	Ident -> L_Ident                                   (3)
	Double -> L_doubl                                  (4)
	Integer -> L_integ                                 (5)
	Program -> Term                                    (6)
	Term -> Variable                                   (7)
	Term -> Integer                                    (8)
	Term -> Double                                     (9)
	Term -> 'lambda' Variable '.' Term                 (10)
	Term -> '(' Term Term ')'                          (11)
	Term -> Term '+' Term                              (12)
	Term -> Term '-' Term                              (13)
	Term -> '(' Term ')'                               (14)
	Variable -> Ident                                  (15)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'+'            { PT _ (TS _ 3) }
	'-'            { PT _ (TS _ 4) }
	'.'            { PT _ (TS _ 5) }
	'lambda'       { PT _ (TS _ 6) }
	L_Ident        { PT _ (TV $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pTerm    rule  1
	%start_pVariable rule  2
	Ident           rule  3
	Double          rule  4
	Integer         rule  5
	Program         rule  6
	Term            rules 7, 8, 9, 10, 11, 12, 13, 14
	Variable        rule  15

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'('            shift, and enter state 11
	'lambda'       shift, and enter state 12
	L_Ident        shift, and enter state 4
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 14

	Ident          goto state 5
	Double         goto state 7
	Integer        goto state 8
	Program        goto state 15
	Term           goto state 16
	Variable       goto state 10

State 1

	%start_pTerm -> . Term                              (rule 1)

	'('            shift, and enter state 11
	'lambda'       shift, and enter state 12
	L_Ident        shift, and enter state 4
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 14

	Ident          goto state 5
	Double         goto state 7
	Integer        goto state 8
	Term           goto state 9
	Variable       goto state 10

State 2

	%start_pVariable -> . Variable                      (rule 2)

	L_Ident        shift, and enter state 4

	Ident          goto state 5
	Variable       goto state 6

State 3

	Ident -> . L_Ident                                  (rule 3)

	L_Ident        shift, and enter state 4


State 4

	Ident -> L_Ident .                                  (rule 3)

	'('            reduce using rule 3
	')'            reduce using rule 3
	'+'            reduce using rule 3
	'-'            reduce using rule 3
	'.'            reduce using rule 3
	'lambda'       reduce using rule 3
	L_Ident        reduce using rule 3
	L_doubl        reduce using rule 3
	L_integ        reduce using rule 3
	%eof           reduce using rule 3


State 5

	Variable -> Ident .                                 (rule 15)

	'('            reduce using rule 15
	')'            reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'.'            reduce using rule 15
	'lambda'       reduce using rule 15
	L_Ident        reduce using rule 15
	L_doubl        reduce using rule 15
	L_integ        reduce using rule 15
	%eof           reduce using rule 15


State 6

	%start_pVariable -> Variable .                      (rule 2)

	%eof           accept


State 7

	Term -> Double .                                    (rule 9)

	'('            reduce using rule 9
	')'            reduce using rule 9
	'+'            reduce using rule 9
	'-'            reduce using rule 9
	'lambda'       reduce using rule 9
	L_Ident        reduce using rule 9
	L_doubl        reduce using rule 9
	L_integ        reduce using rule 9
	%eof           reduce using rule 9


State 8

	Term -> Integer .                                   (rule 8)

	'('            reduce using rule 8
	')'            reduce using rule 8
	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'lambda'       reduce using rule 8
	L_Ident        reduce using rule 8
	L_doubl        reduce using rule 8
	L_integ        reduce using rule 8
	%eof           reduce using rule 8


State 9

	%start_pTerm -> Term .                              (rule 1)
	Term -> Term . '+' Term                             (rule 12)
	Term -> Term . '-' Term                             (rule 13)

	'+'            shift, and enter state 17
	'-'            shift, and enter state 18
	%eof           accept


State 10

	Term -> Variable .                                  (rule 7)

	'('            reduce using rule 7
	')'            reduce using rule 7
	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'lambda'       reduce using rule 7
	L_Ident        reduce using rule 7
	L_doubl        reduce using rule 7
	L_integ        reduce using rule 7
	%eof           reduce using rule 7


State 11

	Term -> '(' . Term Term ')'                         (rule 11)
	Term -> '(' . Term ')'                              (rule 14)

	'('            shift, and enter state 11
	'lambda'       shift, and enter state 12
	L_Ident        shift, and enter state 4
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 14

	Ident          goto state 5
	Double         goto state 7
	Integer        goto state 8
	Term           goto state 20
	Variable       goto state 10

State 12

	Term -> 'lambda' . Variable '.' Term                (rule 10)

	L_Ident        shift, and enter state 4

	Ident          goto state 5
	Variable       goto state 19

State 13

	Double -> L_doubl .                                 (rule 4)

	'('            reduce using rule 4
	')'            reduce using rule 4
	'+'            reduce using rule 4
	'-'            reduce using rule 4
	'lambda'       reduce using rule 4
	L_Ident        reduce using rule 4
	L_doubl        reduce using rule 4
	L_integ        reduce using rule 4
	%eof           reduce using rule 4


State 14

	Integer -> L_integ .                                (rule 5)

	'('            reduce using rule 5
	')'            reduce using rule 5
	'+'            reduce using rule 5
	'-'            reduce using rule 5
	'lambda'       reduce using rule 5
	L_Ident        reduce using rule 5
	L_doubl        reduce using rule 5
	L_integ        reduce using rule 5
	%eof           reduce using rule 5


State 15

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 16

	Program -> Term .                                   (rule 6)
	Term -> Term . '+' Term                             (rule 12)
	Term -> Term . '-' Term                             (rule 13)

	'+'            shift, and enter state 17
	'-'            shift, and enter state 18
	%eof           reduce using rule 6


State 17

	Term -> Term '+' . Term                             (rule 12)

	'('            shift, and enter state 11
	'lambda'       shift, and enter state 12
	L_Ident        shift, and enter state 4
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 14

	Ident          goto state 5
	Double         goto state 7
	Integer        goto state 8
	Term           goto state 25
	Variable       goto state 10

State 18

	Term -> Term '-' . Term                             (rule 13)

	'('            shift, and enter state 11
	'lambda'       shift, and enter state 12
	L_Ident        shift, and enter state 4
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 14

	Ident          goto state 5
	Double         goto state 7
	Integer        goto state 8
	Term           goto state 24
	Variable       goto state 10

State 19

	Term -> 'lambda' Variable . '.' Term                (rule 10)

	'.'            shift, and enter state 23


State 20

	Term -> '(' Term . Term ')'                         (rule 11)
	Term -> Term . '+' Term                             (rule 12)
	Term -> Term . '-' Term                             (rule 13)
	Term -> '(' Term . ')'                              (rule 14)

	'('            shift, and enter state 11
	')'            shift, and enter state 22
	'+'            shift, and enter state 17
	'-'            shift, and enter state 18
	'lambda'       shift, and enter state 12
	L_Ident        shift, and enter state 4
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 14

	Ident          goto state 5
	Double         goto state 7
	Integer        goto state 8
	Term           goto state 21
	Variable       goto state 10

State 21

	Term -> '(' Term Term . ')'                         (rule 11)
	Term -> Term . '+' Term                             (rule 12)
	Term -> Term . '-' Term                             (rule 13)

	')'            shift, and enter state 27
	'+'            shift, and enter state 17
	'-'            shift, and enter state 18


State 22

	Term -> '(' Term ')' .                              (rule 14)

	'('            reduce using rule 14
	')'            reduce using rule 14
	'+'            reduce using rule 14
	'-'            reduce using rule 14
	'lambda'       reduce using rule 14
	L_Ident        reduce using rule 14
	L_doubl        reduce using rule 14
	L_integ        reduce using rule 14
	%eof           reduce using rule 14


State 23

	Term -> 'lambda' Variable '.' . Term                (rule 10)

	'('            shift, and enter state 11
	'lambda'       shift, and enter state 12
	L_Ident        shift, and enter state 4
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 14

	Ident          goto state 5
	Double         goto state 7
	Integer        goto state 8
	Term           goto state 26
	Variable       goto state 10

State 24

	Term -> Term . '+' Term                             (rule 12)
	Term -> Term . '-' Term                             (rule 13)
	Term -> Term '-' Term .                             (rule 13)

	'('            reduce using rule 13
	')'            reduce using rule 13
	'+'            shift, and enter state 17
			(reduce using rule 13)

	'-'            shift, and enter state 18
			(reduce using rule 13)

	'lambda'       reduce using rule 13
	L_Ident        reduce using rule 13
	L_doubl        reduce using rule 13
	L_integ        reduce using rule 13
	%eof           reduce using rule 13


State 25

	Term -> Term . '+' Term                             (rule 12)
	Term -> Term '+' Term .                             (rule 12)
	Term -> Term . '-' Term                             (rule 13)

	'('            reduce using rule 12
	')'            reduce using rule 12
	'+'            shift, and enter state 17
			(reduce using rule 12)

	'-'            shift, and enter state 18
			(reduce using rule 12)

	'lambda'       reduce using rule 12
	L_Ident        reduce using rule 12
	L_doubl        reduce using rule 12
	L_integ        reduce using rule 12
	%eof           reduce using rule 12


State 26

	Term -> 'lambda' Variable '.' Term .                (rule 10)
	Term -> Term . '+' Term                             (rule 12)
	Term -> Term . '-' Term                             (rule 13)

	'('            reduce using rule 10
	')'            reduce using rule 10
	'+'            shift, and enter state 17
			(reduce using rule 10)

	'-'            shift, and enter state 18
			(reduce using rule 10)

	'lambda'       reduce using rule 10
	L_Ident        reduce using rule 10
	L_doubl        reduce using rule 10
	L_integ        reduce using rule 10
	%eof           reduce using rule 10


State 27

	Term -> '(' Term Term ')' .                         (rule 11)

	'('            reduce using rule 11
	')'            reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'lambda'       reduce using rule 11
	L_Ident        reduce using rule 11
	L_doubl        reduce using rule 11
	L_integ        reduce using rule 11
	%eof           reduce using rule 11


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 16
Number of terminals: 9
Number of non-terminals: 9
Number of states: 28
